--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile files('E:/webim/asmack.jar')
+    compile files('C:/Users/Administrator/Desktop/webim/asmack.jar')
 }
