--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.lfk.webim" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name ="android.permission.GET_TASKS"/>
 
     <application
         android:allowBackup="true"
